bmi calculator done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="bmi-box2">
-                    <p>Visit my portfolio</p>
+                    <a href="https://my-portfolio-astro-omega.vercel.app/"><p>Visit my portfolio</p></a>
                 </div>
             </div>
             
